avoid using of Path.of() - resolve relative path using a known base (`Path.resolve`)
GitOrigin-RevId: dfe97d1dc9bebf5c4bc06942d2b1cfc0bd0644c9